force-app/main/default/objects/Partner_Portal_Label__c/Partner_Portal_Label__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community :</description>
    <label>Partner Portal Box</label>
    <nameField>
        <label>Partner_Portal_Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Box</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>