force-app/main/default/objects/Partner_Portal_Label__c/fields/GRID_Portal_Profile__c.field-meta.xml
<CustomField>
    <fullName>GRID_Portal_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GRID_Portal_Profile</label>
    <referenceTo>GRID_Portal_Profiles__c</referenceTo>
    <relationshipLabel>Partner_Portal_Labels</relationshipLabel>
    <relationshipName>Partner_Portal_Labels</relationshipName>
    <type>Lookup</type>
</CustomField>