force-app/main/default/objects/Partner_Portal_Label__c/fields/Label_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Label_Serial_Number__c</fullName>
    <label>Label Serial Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>