force-app/main/default/objects/Partner_Portal_Label__c/fields/Not_for_Restricted_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Not_for_Restricted_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not for Restricted Accounts</label>
    <type>Checkbox</type>
</CustomField>