force-app/main/default/objects/Partner_Portal_Label__c/fields/Partner_Portal_Tab__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner_Portal_Tab</label>
    <referenceTo>Partner_Portal_Tab__c</referenceTo>
    <relationshipLabel>Partner_Portal_Labels</relationshipLabel>
    <relationshipName>Partner_Portal_Labels</relationshipName>
    <type>Lookup</type>
</CustomField>