force-app/main/default/objects/Partner_Portal_Label__c/fields/Portal_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Content_Type__c</fullName>
    <label>Portal Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>NVEP</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>