force-app/main/default/objects/Partner_Portal_Label__c/fields/Portal_Tab__c.field-meta.xml
<CustomField>
    <fullName>Portal_Tab__c</fullName>
    <label>Portal Tabs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>