force-app/main/default/objects/Partner_Portal_Label__c/fields/Stage_Box_Id__c.field-meta.xml
<CustomField>
    <fullName>Stage_Box_Id__c</fullName>
    <label>Stage Box Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>