force-app/main/default/objects/Partner_Portal_Label__c/listViews/All_Boxes.listView-meta.xml
<ListView>
    <fullName>All_Boxes</fullName>
    <columns>Language__c</columns>
    <columns>NAME</columns>
    <columns>Portal_Tab__c</columns>
    <columns>Portal_Content_Type__c</columns>
    <columns>Permission_Set__c</columns>
    <columns>Label_Serial_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Boxes</label>
    <language>en_US</language>
</ListView>