force-app/main/default/objects/Partner_Portal_Label__c/listViews/All_Boxes_Taiwanese.listView-meta.xml
<ListView>
    <fullName>All_Boxes_Taiwanese</fullName>
    <columns>Language__c</columns>
    <columns>NAME</columns>
    <columns>Portal_Tab__c</columns>
    <columns>Portal_Content_Type__c</columns>
    <columns>Permission_Set__c</columns>
    <columns>Label_Serial_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>Taiwanese</value>
    </filters>
    <label>All Boxes - Taiwanese</label>
    <language>en_US</language>
</ListView>