force-app/main/default/objects/Partner_Portal_Label__c/listViews/Generic_Boxes.listView-meta.xml
<ListView>
    <fullName>Generic_Boxes</fullName>
    <columns>Language__c</columns>
    <columns>NAME</columns>
    <columns>Portal_Tab__c</columns>
    <columns>Portal_Content_Type__c</columns>
    <columns>Permission_Set__c</columns>
    <columns>Label_Serial_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Set__c</field>
        <operation>notContain</operation>
        <value>VCA</value>
    </filters>
    <filters>
        <field>Permission_Set__c</field>
        <operation>notContain</operation>
        <value>VGX</value>
    </filters>
    <filters>
        <field>Permission_Set__c</field>
        <operation>notContain</operation>
        <value>TPP</value>
    </filters>
    <label>Generic Boxes</label>
    <language>en_US</language>
</ListView>