force-app/main/default/objects/Partner_Portal_Label__c/listViews/TPP_Boxes.listView-meta.xml
<ListView>
    <fullName>TPP_Boxes</fullName>
    <columns>Language__c</columns>
    <columns>NAME</columns>
    <columns>Portal_Tab__c</columns>
    <columns>Portal_Content_Type__c</columns>
    <columns>Permission_Set__c</columns>
    <columns>Label_Serial_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Set__c</field>
        <operation>contains</operation>
        <value>TPP</value>
    </filters>
    <label>TPP Boxes</label>
    <language>en_US</language>
</ListView>